--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@ override.tf.json
 # Ignore generated cert files
 certificates/**
 !certificates/certGen.sh
-!certificates/openssl.cnf
+!certificates/openssl_device_intermediate_ca.cnf
+!certificates/openssl_root_ca.cnf
 my.tfvars
 
 
